# tetmag

./: AUTHORS.md  CMakeLists.txt  README.md  codemeta.json
gpu/: CMakeLists.txt  EffFieldGPU.cu  EffFieldGPU.h  GpuPotential.cu  LLGWrapper.cu  SpMatCUDA.cu  SpMatCUDA.h  TheLLG_GPU.cu
io/: GMSHReader.cpp  MeshWriter.cpp  MeshWriter.h
main/: DemagField.cpp  DemagField.h  LLGIntegrator.cpp  LLGIntegrator.h  TheLLG.cpp  TheLLG.h  TheSimulation.cpp  TheSimulation.h  tetmag.cpp
preproc/: BEMprocessing.cpp
specs/: ProgramSpecs.cpp  ProgramSpecs.h  SimulationData.cpp  SimulationData.h
utils/: auxiliaries.cpp
